# oopLab_6

./: CMakeLists.txt  README.md
include/: BattleVisitor.hpp  IVisitor.hpp  battle_visitor.hpp  bear.hpp  factory.hpp  npc.hpp  observer.hpp  observers.hpp  orc.hpp  squirrel.hpp  visitor.hpp  world.hpp
src/: BattleVisitor.cpp  battle_visitor.cpp  bear.cpp  factory.cpp  main.cpp  npc.cpp  observer.cpp  orc.cpp  squirrel.cpp  world.cpp
test/: dnd_test.cpp
